--- a/examples/three.html
+++ b/examples/three.html
@@ -3,17 +3,18 @@
 <body>
 
 	<script src= "js/vendor/three.min.js"></script>
-	<script src="../src/Paik.js"></script>
-	<script src="../src/Clip.js"></script>
-	<script src="../src/Core.js"></script>
-	<script src="../src/Group.js"></script>
-	<script src="../src/GroupController.js"></script>
-	<script src="../src/Interval.js"></script>
-	<script src="../src/Resource.js"></script>
-	<script src="../src/TimecodeController.js"></script>
-	<script src="../src/Timeline.js"></script>
-	<script src="../src/Util.js"></script>
-	<script src="../src/Video.js"></script>
+	<!-- // <script src="../build/Paik.js"></script> -->
+	 <script src="../src/Paik.js"></script>
+	 <script src="../src/Clip.js"></script>
+	 <script src="../src/Core.js"></script>
+	 <script src="../src/Group.js"></script>
+	 <script src="../src/GroupController.js"></script>
+	 <script src="../src/Interval.js"></script>
+	 <script src="../src/Resource.js"></script>
+	 <script src="../src/TimecodeController.js"></script>
+	 <script src="../src/Timeline.js"></script>
+	 <script src="../src/Util.js"></script>
+	 <script src="../src/Video.js"></script>
 
 
 	<script type="text/javascript">
