Addes safety checks

--- a/examples/three.html
+++ b/examples/three.html
@@ -50,7 +50,7 @@
 		sceneGroup.Add( new Pk.Clip(1700, 2700, [obj2],PrintTime));
 
 
-		Pk.Timeline.Build();
+		Pk.Player.Build();
 
 		var video = Pk.Video.FromUrl("video/video.mp4");
 		Pk.Player.SetTimecodeTrack(video.GetTimecodeController());
